fixed clipping at top of solar system

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -56,7 +56,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
   }
 
   .sun {
